@@ -83,7 +83,7 @@ extern "C"
  *
  ****************************************************************************/
 
-void sam_clockconfig(void);
+void __ramfunc__ sam_clockconfig(void);
 
 /****************************************************************************
  * Name: board_norflash_config
